# budgeting-app-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  scheduler_events.py
alembic/: env.py  script.py.mako
alembic/versions/: 20230402_180250_create_settings.py  20230402_195309_create_dumps.py  20250427_235855_remove_dumps_table.py
src/budgeting_app_backend/: __init__.py  category_expansions.py  sql_settings.py  state.py
src/budgeting_app_backend/backup/: __init__.py  backup_service.py  scheduler.py
src/budgeting_app_backend/budgets/: __init__.py  currency_config.py  spending_limits.py
src/budgeting_app_backend/exporting/: __init__.py  csv_exporting.py
src/budgeting_app_backend/importing/: __init__.py  csv_importing.py  cvs_import.py  cvs_importing.py
src/budgeting_app_backend/protocols/: __init__.py  settings_protocol.py  sql_connection_protocol.py
src/budgeting_app_backend/services/: __init__.py  google_drive.py
src/budgeting_app_backend/settings/: __init__.py  account_properties.py  category_expansions.py  settings.py  spending_limits.py  upload_details.py
src/budgeting_app_backend/sqlite/: __init__.py  connection.py
src/budgeting_app_backend/transactions/: __init__.py  csv_source.py  csv_source_test.py  db_source.py  dump.py  example.py  example_test.py  google_drive_dump.py
