[tool.poetry]
name = "budgeting-app-backend"
version = "0.1.0"
description = "Budgeting app backend"
authors = ["Ivan Reshetnikov <resivalex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytest = "^7.2.0"
jupyterlab = "^3.5.2"
pandas = "^1.5.2"
pycouchdb = "^1.14.2"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
