[tool.poetry]
name = "budgeting-app-backend"
version = "0.1.0"
description = "Budgeting app backend"
authors = ["Ivan Reshetnikov <resivalex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytest = "^7.2.0"
jupyterlab = "^3.5.2"
pandas = "^1.5.2"
pycouchdb = "^1.14.2"
python-multipart = "^0.0.5"
alembic = "^1.10.2"
# Google Drive integration
google-api-python-client = "^2.80.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
# Scheduler
apscheduler = "^3.10.1"
# Utilities
tabulate = "^0.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
